--- a/playbook.yml
+++ b/playbook.yml
@@ -27,5 +27,11 @@
         pull: yes
         ports:
           - 8080:3000
+        env:
+          REDMINE_DB_POSTGRES: "{{ APP_DB_HOST }}"
+          REDMINE_DB_PORT: "{{ APP_DB_PORT }}"
+          REDMINE_DB_DATABASE: "{{ APP_DB_DATABASE }}"
+          REDMINE_DB_USERNAME: "{{ APP_DB_USERNAME }}"
+          REDMINE_DB_PASSWORD: "{{ APP_DB_PASSWORD }}"
         state: started
         container_default_behavior: compatibility
