--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -1,4 +1,10 @@
 ---
-# Install a role from Ansible Galaxy.
-- name: datadog.datadog
-  version: 4.10.0
+roles:
+  # Install a role from Ansible Galaxy.
+  - name: datadog.datadog
+    version: 4.10.0
+
+collections:
+  # Install a collection from Ansible Galaxy.
+  - name: community.docker
+    version: 1.6.1
