--- a/ansible/cd.yml
+++ b/ansible/cd.yml
@@ -13,4 +13,4 @@
         name: datadog.datadog
         apply:
           become: yes
-      when: datadog_install_agent|default(false)|boolean == true
+      when: datadog_install_agent|default(False)
