--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 .vagrant
 /ansible/env/ssh_key
-.env
 /ansible/tmp/ansible-vault-password
+ansible/thirdparty_roles
+ansible/ansible_collections
+.env
