--- a/ansible/cd.yml
+++ b/ansible/cd.yml
@@ -1,6 +1,14 @@
 ---
 - hosts: all
   gather_facts: yes
-  roles:
-    - common
-    - app-deploy
+  tasks:
+    - include_role:
+        name: common
+
+    - include_role:
+        name: app-deploy
+
+    - name: Deploy Datadog Agent
+      include_role:
+        name: datadog.datadog
+      when: datadog_install_agent|default(False)
