--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,3 @@
 [defaults]
-roles_path = ./ansible/roles:./ansible/ansible_roles
+roles_path = ./ansible/roles:./ansible/thirdparty_roles
 collections_paths = ./ansible
