fix: exclude install datadog agent (hexlet-check)

--- a/ansible/cd.yml
+++ b/ansible/cd.yml
@@ -8,7 +8,7 @@
     - include_role:
         name: app-deploy
 
-    - name: Deploy Datadog Agent
-      include_role:
-        name: datadog.datadog
-      when: datadog_install_agent|default(False)
+    # - name: Deploy Datadog Agent
+    #   include_role:
+    #     name: datadog.datadog
+    #   when: datadog_install_agent|default(False)
