--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,4 @@
 [defaults]
-roles_path = ./roles:./thirdparty_roles
-collections_paths = .
+roles_path = ./tmp/thirdparty_roles
+collections_paths = ./tmp/
+host_key_checking = False
