fix: fix ansible error - deprecate() got an unexpected keyword argument 'collection_name'

--- a/roles/app-deploy/tasks/main.yml
+++ b/roles/app-deploy/tasks/main.yml
@@ -16,3 +16,4 @@
       REDMINE_DB_USERNAME: "{{ app_db_username }}"
       REDMINE_DB_PASSWORD: "{{ app_db_password }}"
     state: started
+    container_default_behavior: compatibility
